--- a/airfreight.html
+++ b/airfreight.html
@@ -135,7 +135,7 @@
             </h2>
 
             <p class="hero-text">
-                <ul class= "hero-text" style="text-shadow: rgb(255, 115, 0) 1px 0 10px;">
+                <ul class= "hero-text" style="text-shadow: rgb(255, 115, 0) 1px 0 10px;font-size: 25px;">
                     <li>At SYS, we understand the critical importance of air freight for timely consignment delivery. When evaluating prices with airlines, our Air Freight team carefully considers several key factors before proceeding with a booking:</li>
 
                     <li class="list">Transit Time</li>
