--- a/allieds.html
+++ b/allieds.html
@@ -135,7 +135,7 @@
             </h2>
 
             <p class="hero-text">
-                <ul class= "hero-text" style="text-shadow: rgb(255, 242, 0) 1px 0 10px;">
+                <ul class= "hero-text" style="text-shadow: rgb(255, 242, 0) 1px 0 10px;font-size: 25px;">
                     <li> Customs Clearance: Expert handling of import and export procedures to ensure smooth passage of goods across borders.</li>
 
                     <li class="list">Insurance: Comprehensive coverage options to protect your shipments against potential risks and losses.</li>
