--- a/customclearance.html
+++ b/customclearance.html
@@ -135,7 +135,7 @@
             </h2>
 
             <p class="hero-text">
-                <ul class= "hero-text" style="text-shadow: rgb(255, 119, 0) 1px 0 10px;">
+                <ul class= "hero-text" style="text-shadow: rgb(255, 119, 0) 1px 0 10px;font-size: 25px;">
                     <li>Customs documentation can often be a tedious and complex process for exporters and importers. With extensive knowledge of customs procedures and documentation, SYS's expert team is here to assist you every step of the way.</li>
 
                     <li>We help classify commodities based on Harmonized System Codes (HS Codes) and guide our clients through the required documentation to ensure smooth and hassle-free shipment clearance.</li>
