--- a/dtd.html
+++ b/dtd.html
@@ -134,7 +134,7 @@
             </h2>
 
             <p class="hero-text">
-                <ul class= "hero-text" style="text-shadow: rgb(255, 119, 0) 1px 0 10px;">
+                <ul class= "hero-text" style="text-shadow: rgb(255, 119, 0) 1px 0 10px;font-size: 25px;">
                     <li>Convenient Pickup and Delivery: We handle every step from your doorstep to the destination, ensuring a hassle-free experience.</li>
 
                     <li class="list">Real-Time Tracking: Stay informed with up-to-date tracking information throughout the entire journey of your shipment.</li>
