--- a/forgot.html
+++ b/forgot.html
@@ -17,7 +17,7 @@
       <form action="" class="login__form" name="Formfill" onsubmit="return validation()">
          <h1 class="login__title">Forgot Password</h1>
 
-         <p id="result" style="color: rgb(255, 255, 255); text-align: center; margin-bottom: 1rem;font-weight: 300;">Enter Your Registered Email Address</p>
+         <p id="result" style="color: rgb(255, 255, 255); text-align: center; margin-bottom: 1rem;font-weight: 300;font-size: 25px;">Enter Your Registered Email Address</p>
 
          <div class="login__content">
             
