--- a/roadtransport.html
+++ b/roadtransport.html
@@ -134,9 +134,9 @@
             </h2>
 
             <p class="hero-text">
-                <ul class= "hero-text">
-                    <li style="text-shadow: rgb(255, 115, 0) 1px 0 10px;">Interstate transport is the latest business vertical launched by SYS. Through a recent survey, we discovered that many suppliers struggle with transporters who fail to provide timely updates, leading to a loss of buyer trust.</li>
-                    <li style="text-shadow: rgb(255, 115, 0) 1px 0 10px;">At SYS, our team closely monitors your shipment and regularly communicates with the hauler to ensure timely updates. With our advanced SYS Eye Watch system, you can track the real-time location of your cargo, ensuring transparency and peace of mind throughout the journey.
+                <ul class= "hero-text" >
+                    <li style="text-shadow: rgb(255, 115, 0) 1px 0 10px;font-size: 25px;">Interstate transport is the latest business vertical launched by SYS. Through a recent survey, we discovered that many suppliers struggle with transporters who fail to provide timely updates, leading to a loss of buyer trust.</li>
+                    <li style="text-shadow: rgb(255, 115, 0) 1px 0 10px;font-size: 25px;">At SYS, our team closely monitors your shipment and regularly communicates with the hauler to ensure timely updates. With our advanced SYS Eye Watch system, you can track the real-time location of your cargo, ensuring transparency and peace of mind throughout the journey.
 
                     </li>
                     
