--- a/seafreight.html
+++ b/seafreight.html
@@ -135,7 +135,7 @@
             </h2>
 
             <p class="hero-text">
-                <ul class= "hero-text" style="text-shadow: rgb(255, 242, 0) 1px 0 10px;">
+                <ul class= "hero-text" style="text-shadow: rgb(255, 242, 0) 1px 0 10px;font-size: 25px;">
                     <li>SYS is a trusted and authorized freight booking partner for the world’s leading shipping lines, including:
 
                     </li>
