--- a/specialequipment.html
+++ b/specialequipment.html
@@ -136,7 +136,7 @@
             </h2>
 
             <p class="hero-text">
-                <ul class= "hero-text" style="text-shadow: rgb(255, 243, 8) 1px 0 ;font-size: 30px;color:rgb(255, 221, 0);">
+                <ul class= "hero-text" style="text-shadow: rgb(255, 243, 8) 1px 0 ;font-size: 30px;color:rgb(255, 221, 0);font-size: 25px;">
                     <li>Customs documentation is often a complex and time-consuming process for exporters and importers. With our deep expertise in customs regulations, SYS’s dedicated team provides comprehensive support to guide you through each step. We simplify the documentation process, ensuring that your shipments move smoothly and efficiently.</li>
                     <li>A key part of our service is helping classify commodities using Harmonized System Codes (HS Codes), ensuring accurate categorization and reducing the risk of customs delays. We work closely with clients to make sure all required documents are in order, ensuring compliance and a hassle-free clearance process.</li>
                     <li>In addition, SYS liaises with critical government authorities such as the ADC Department, FSSAI, Spice Board, Health Department, and Phyto Department. This ensures that all necessary regulatory requirements are met, preventing delays and enabling seamless shipment processing.</li>
