--- a/syseyewatch.html
+++ b/syseyewatch.html
@@ -135,7 +135,7 @@
             </h2>
 
             <p class="hero-text">
-                <ul class= "hero-text" style="text-shadow: rgb(255, 111, 0) 1px 0 10px;">
+                <ul class= "hero-text" style="text-shadow: rgb(255, 111, 0) 1px 0 10px;font-size: 25px;">
                     <li> With the SYS Eye Watch system, you can track the real-time status of your valuable cargo anytime, anywhere, right at your fingertips. Our dedicated SYS team continuously monitors your shipment, ensuring timely and secure delivery.</li>
                     
                     <li class="list">SYS Job Number</li>
