--- a/ware.html
+++ b/ware.html
@@ -136,7 +136,7 @@
             </h2>
 
             <p class="hero-text">
-                <ul class= "hero-text" style="text-shadow: rgb(255, 106, 0) 1px 0 10px;">
+                <ul class= "hero-text" style="text-shadow: rgb(255, 106, 0) 1px 0 10px;font-size: 25px;">
                     <li> Our warehouses are designed with advanced technology and optimized layouts to provide the highest level of service and operational excellence.</li>
 
                     <li class="list">Secure Storage: Our warehouses are equipped with top-notch security systems to protect your inventory 24/7.</li>
