--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- external css -->
     <link rel="stylesheet" href="./assets/css/style.css">
 
-    <!-- google fonts -->
+    <!-- google fonts and icons -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;600;700&family=Rubik:wght@400;500;600;700&display=swap"rel="stylesheet">
