--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="shortcut icon" href="./favicon.ico" type="image/svg+xml">
 
     <!-- external css -->
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
 
     <!-- google fonts and icons -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
