--- a/ware.html
+++ b/ware.html
@@ -32,7 +32,7 @@
         <div class="container">
 
           <h1>
-            <a href="index.html" class="logo caprasimo-regular">
+            <a href="index.html" class="logo caprasimo-regular" style="font-size: 2.1rem;">
               <span class="sys">SYS</span> Shipping & Logistics Pvt Ltd
             </a>
           </h1>
